--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,18 @@ add_library(gec INTERFACE)
 target_include_directories(gec INTERFACE "./include")
 target_compile_features(gec INTERFACE cxx_std_14)
 
+option(GEC_ENABLE_AVX2 "use avx2" OFF)
+if(GEC_ENABLE_AVX2)
+    target_compile_definitions(gec INTERFACE GEC_ENABLE_AVX2)
+    if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+        target_compile_options(gec INTERFACE -march=native)
+    elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+        target_compile_options(gec INTERFACE -march=native)
+    elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+        target_compile_options(gec INTERFACE /arch:AVX2)
+    endif()
+endif()
+
 option(GEC_ENABLE_PTHREAD "use pthread" OFF)
 if(GEC_ENABLE_PTHREAD)
     target_compile_definitions(gec INTERFACE GEC_ENABLE_PTHREAD)
