--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -57,8 +57,8 @@ if(GEC_ENABLE_CUDA)
         $<$<AND:$<CONFIG:Debug>,$<COMPILE_LANGUAGE:CUDA>>:-g -G>)
     target_compile_options(cu_unit_test PRIVATE
         $<$<AND:$<CONFIG:RelWithDebInfo>,$<COMPILE_LANGUAGE:CUDA>>:-lineinfo>)
-    # target_compile_options(cu_unit_test PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:--display-error-number>)
-    target_compile_options(cu_unit_test PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:--no-display-error-number>)
+    # target_compile_options(cu_unit_test PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-Xcudafe --display_error_number>)
+    # target_compile_options(cu_unit_test PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-Xcudafe --no_display_error_number>)
 
     add_test(NAME gec_cuda_test COMMAND cu_unit_test ~[bench])
 endif()
