test: change tests layout

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.17)
 
 find_package(Catch2 CONFIG REQUIRED)
 
@@ -7,59 +7,20 @@ target_compile_features(unit_test_shared PUBLIC cxx_std_14)
 target_link_libraries(unit_test_shared PUBLIC gec Catch2::Catch2)
 
 # enable warning in test
-
 target_compile_options(
     unit_test_shared
     PUBLIC
-        $<$<AND:$<COMPILE_LANGUAGE:CXX>,$<CXX_COMPILER_ID:MSVC>>:/W3>
-        $<$<AND:$<COMPILE_LANGUAGE:CXX>,$<NOT:$<CXX_COMPILER_ID:MSVC>>>:-Wall
-        -Wextra
-        -Wpedantic>
-        $<$<AND:$<COMPILE_LANGUAGE:CUDA>,$<CXX_COMPILER_ID:MSVC>>:-Xcompiler=/W3>
-        $<$<AND:$<COMPILE_LANGUAGE:CUDA>,$<NOT:$<CXX_COMPILER_ID:MSVC>>>:-Xcompiler=-Wall
-        -Xcompiler=-Wextra>
+    $<$<AND:$<COMPILE_LANGUAGE:CXX>,$<CXX_COMPILER_ID:MSVC>>:/W3>
+    $<$<AND:$<COMPILE_LANGUAGE:CXX>,$<NOT:$<CXX_COMPILER_ID:MSVC>>>:-Wall
+    -Wextra
+    -Wpedantic>
+    $<$<AND:$<COMPILE_LANGUAGE:CUDA>,$<CXX_COMPILER_ID:MSVC>>:-Xcompiler=/W3>
+    $<$<AND:$<COMPILE_LANGUAGE:CUDA>,$<NOT:$<CXX_COMPILER_ID:MSVC>>>:-Xcompiler=-Wall
+    -Xcompiler=-Wextra>
 )
 
-add_executable(unit_test)
-target_sources(
-    unit_test
-    PRIVATE "common.cpp"
-            "curve.cpp"
-            "test_misc.cpp"
-            "test_arithmetic.cpp"
-            "test_bigint.cpp"
-            "test_field.cpp"
-            "test_context.cpp"
-            "test_curve.cpp"
-            "test_dlp.cpp")
-target_link_libraries(unit_test PRIVATE unit_test_shared)
-
-add_test(NAME gec_test COMMAND unit_test ~[bench])
+add_subdirectory(cpu)
 
 if(GEC_ENABLE_CUDA)
-    add_executable(cu_unit_test)
-    target_sources(
-        cu_unit_test
-        PRIVATE "cuda_common.cu"
-                "common.cu"
-                "curve.cu"
-                "test_arithmetic.cu"
-                "cu_test_arithmetic.cu"
-                "test_bigint.cu"
-                "cu_test_bigint.cu"
-                "test_field.cu"
-                "test_curve.cu"
-                "cu_test_field.cu"
-                "test_dlp.cu"
-                "cu_test_dlp.cu")
-    target_link_libraries(cu_unit_test PRIVATE unit_test_shared)
-    set_target_properties(cu_unit_test PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-    target_compile_options(cu_unit_test PRIVATE
-        $<$<AND:$<CONFIG:Debug>,$<COMPILE_LANGUAGE:CUDA>>:-g -G>)
-    target_compile_options(cu_unit_test PRIVATE
-        $<$<AND:$<CONFIG:RelWithDebInfo>,$<COMPILE_LANGUAGE:CUDA>>:-lineinfo>)
-    # target_compile_options(cu_unit_test PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-Xcudafe --display_error_number>)
-    # target_compile_options(cu_unit_test PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-Xcudafe --no_display_error_number>)
-
-    add_test(NAME gec_cuda_test COMMAND cu_unit_test ~[bench])
+    add_subdirectory(cuda)
 endif()
